[project]
name = "olake"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "plotly>=6.3.1",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pyiceberg[sql-sqlite]>=0.10.0",
    "seaborn>=0.13.2",
]
